[package]
authors = ["Valeriy Kostikov <mkoctuk@gmail.com>"]
edition = "2018"
name = "rptb"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
rutel = {version = "0.6", git = "https://github.com/serbe/rutel"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
tokio = {version = "1", features = ["full"]}
